namespace ParkingSystem.Core.Aggregates
{
    public enum PaymentMethod
    {
        MBWay = 0,
        Card = 1,
    }
}