namespace ParkingSystem.Core.Aggregates
{
    public enum Role
    {
        Client = 0,
        ParkManager = 1,
        Admin = 2,
    }
}